--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,7 +32,9 @@
                   <% end %>
                 </td>
                 <td><%= book.body %></td>
-                <td class="favorite-btn"><%= render "favorites/favorite-btn", book: book %></td>
+                <td id="favorite-btn_<%= book.id %>">
+                  <%= render "favorites/favorite-btn", book: book %>
+                </td>
                 <td>コメント数：<%= book.book_comments.count %></td>
               </tr>
              <% end %>
